force-app/main/default/objects/Jira_Demo_Setting__mdt/Jira_Demo_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Stores direct Jira integration settings and reporter mappings for the Agentforce demo.</description>
    <label>Jira Demo Setting</label>
    <pluralLabel>Jira Demo Settings</pluralLabel>
</CustomObject>