force-app/main/default/objects/Jira_Demo_Setting__mdt/fields/AuxValue__c.field-meta.xml
<CustomField>
    <fullName>AuxValue__c</fullName>
    <description>Optional secondary value, used for things like project key, browse base URL, or Jira display name.</description>
    <label>Aux Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>