force-app/main/default/objects/Jira_Demo_Setting__mdt/fields/SettingKey__c.field-meta.xml
<CustomField>
    <fullName>SettingKey__c</fullName>
    <description>Logical key for the setting, such as NamedCredentialApiName or a Salesforce username.</description>
    <label>Setting Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>