force-app/main/default/objects/Jira_Demo_Setting__mdt/fields/SettingType__c.field-meta.xml
<CustomField>
    <fullName>SettingType__c</fullName>
    <description>Distinguishes configuration records from reporter-mapping records.</description>
    <label>Setting Type</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>