force-app/main/default/objects/Jira_Demo_Setting__mdt/fields/SettingValue__c.field-meta.xml
<CustomField>
    <fullName>SettingValue__c</fullName>
    <description>Main setting value, such as a named credential API name, Jira project or issue-type id, or Jira accountId.</description>
    <label>Setting Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>